--- a/app/views/books/_form.html.haml
+++ b/app/views/books/_form.html.haml
@@ -1,13 +1,37 @@
 = form_for @book do |f|
-  = f.label :name, 'Name:'
-  = f.text_field :name
-  %br/
-  = f.label :name, 'Author:'
-  = f.text_field :author
-  %br/
-  = f.label :name, 'Description:'
-  = f.text_area :description
-  %br/
+  .row{ style: 'padding: 1.25rem;' }
+    %table
+      %tbody
+        %tr
+          %td
+            = f.label :name, 'Name:'
+          %td
+            = f.text_field :name
+        %tr
+          %td
+            = f.label :name, 'Author:'
+          %td
+            = f.text_field :author
+        %tr
+          %td
+            = f.label :description, 'Description:'
+          %td
+            = f.text_area(:description, class: 'text_area_block', style: 'width: 100%; height: 20vh;' )
+        %tr
+          %td
+            = f.label :enveloper, 'Local file:'
+          %td
+            = f.file_field :envelope
+            = f.hidden_field :envelope_cache
+        %tr
+          %td{ colspan: '2' }
+            %span Choose one of
+            -#%button.btn.btn-sm.btn-warning
+              = fa_icon 'arrows-v'
+        %tr
+          %td
+            = f.label :remote_envelope_url, 'Image-link URL:'
+          %td
+            = f.text_field :remote_envelope_url
   .actions
-    = f.submit 'Save', class: 'btn btn-info'
-
+    = f.submit 'Save', class: 'btn btn-success'
