--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -3,9 +3,6 @@
     .modal-content
 .main_nav_bar
   .btn-group
-    //%p
-    %btn.btn.btn-dark
-      Book: #{@book.name}
     - if request.referer && request.referer != request.original_url
       = link_to 'Back', request.referrer, id: 'back', class: 'btn btn-dark'
     - else
@@ -22,30 +19,38 @@
         - if defined?(@book.envelope)
           %img.img-fluid{ alt: 'book_envelope', src: @book.envelope.thumb.url }
       .col.col-8.other
-        %p
+        %p.mb-1
           Book name:
           = @book.try(:name)
-        %p
+        %p.mb-1
           Author:
           = @book.try(:author)
-        %p
+        #lcount.p.mb-1
           Actuality:
           = @book.likes_count
-        %p
+        %p.mb-1
           = @book.try(:description)
         - if @book.status
           %btn.btn.btn-sm.btn-success.disabled
             Book available
-        -else
+          = link_to 'Take book', take_book_path(@book), { method: :put }
+        - else
           %btn.btn.btn-sm.btn-danger.disabled
             Book taken
         - if current_user
           - if exist_like?(@book)
-            //= link_to (fa_icon 'thumbs-down'), new_book_like_path(@book), class: "btn btn-sm btn-secondary", remote: true, id: 'like'
-            = link_to 'unlike', new_book_like_path(@book), class: "btn btn-sm btn-secondary", remote: true, id: 'like'
+            = link_to (fa_icon 'thumbs-down'), new_book_like_path(@book), class: "btn btn-sm btn-secondary", remote: true, id: 'like'
           - else
-            //= link_to (fa_icon 'thumbs-up'), new_book_like_path(@book), class: "btn btn-sm btn-success", remote: true, id: 'like'
-            = link_to 'like', new_book_like_path(@book), class: "btn btn-sm btn-success", remote: true, id: 'like'
+            = link_to (fa_icon 'thumbs-up'), new_book_like_path(@book), class: "btn btn-sm btn-success", remote: true, id: 'like'
+
+          -# remote: true,
+          -#- if bk.status
+          -#  #take-button.btn.btn-sm.btn-success
+          -#    Book available
+          -#-else
+          -#  %btn.btn.btn-sm.btn-danger.disabled
+          -#    %span
+          -#      Book taken
 
   .d-flex.mt-1.justify-content-center
     = render 'comments/form'
