--- a/app/views/devise/registrations/_modal.html.haml
+++ b/app/views/devise/registrations/_modal.html.haml
@@ -1,29 +1,29 @@
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+= form_for(resource, as: resource_name, url: registration_path(resource_name), namespace: 'reg_') do |f|
   = devise_error_messages!
   .row
     %table
       %tbody
         %tr
           %td
-            = f.label :email, 'Email:'
+            = f.label :email, 'Email:', id: 'reg_email_label'
           %td
-            = f.email_field :email, autofocus: true, autocomplete: 'email'
+            = f.email_field :email, autofocus: true, autocomplete: 'email', id: 'reg_email'
         %tr
           %td
-            = f.label :password, 'Password:'
+            = f.label :password, 'Password:', id: 'reg_password_label'
           %td
-            = f.password_field :password, autocomplete: 'new-password'
+            = f.password_field :password, autocomplete: 'new-password', id: 'reg_password'
         %tr
           %td{ colspan: '2' }
             %h6
               - if @minimum_password_length
-                %em{b: ''}
+                %em{ b: '' }
                   #{@minimum_password_length} characters minimum
         %tr
           %td
-            = f.label :password_confirmation, 'Password confirmation:'
+            = f.label :password_confirmation, 'Password confirmation:', id: 'reg_pass_confirm_label'
           %td
-            = f.password_field :password_confirmation, autocomplete: 'new-password'
+            = f.password_field :password_confirmation, autocomplete: 'new-password', id: 'reg_pass_confirm'
   .row
     .actions
-      = f.submit 'Sign up', class: 'btn btn-success'
+      = f.submit 'Sign up', class: 'btn btn-success', id: 'reg_success'
