--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,7 +2,12 @@
   .modal-dialog.modal-dialog-centered{ role: 'document' }
     .modal-content
 .main_nav_bar
-  = link_to 'Edit user', edit_user_path(@user), { remote: true, 'data-toggle': 'modal',
+  = link_to 'Root', root_path, class: 'btn btn-dark'
+  - if request.referer && request.referer != request.original_url
+    = link_to 'Back', request.referrer, id: 'back', class: 'btn btn-dark'
+  - else
+    = link_to 'Back', books_path, id: 'back', class: 'btn btn-dark'
+  = link_to 'Edit user', edit_user_path(@user), { remote: true, 'data-toggle': 'modal', class: 'btn btn-dark',
                                                   'data-target': '#edit-user-window', id: 'eul' }
 .page_content
   .row.mt-5
@@ -42,5 +47,26 @@
       %alert.alert.alert-success{ role: "alert", style: 'width: 50%; height: 40px;' }
         %span.vertical-center
           Books taken by you subscriptions:
-
-
+    .row
+      - @user.registers.where(expired: false).each_with_index do |reg, index|
+        .col.col-12.col-xl-6
+          .row.justify-content-center.mb-3
+            .col.col-3
+              //- if defined?(reg.book.envelope)
+              %img.img-fluid{ alt: 'book_envelope', src: reg.book.envelope.thumb.url }
+            .col.col-9.other
+              %p
+                Book name:
+                = reg.book.try(:name)
+              %p
+                Author:
+                = reg.book.try(:author)
+              #lcount.p
+                Actuality:
+                = reg.book.likes_count
+              %p
+                = reg.book.try(:description).truncate(100, omission: '...')
+              %btn.btn
+                = link_to 'Look', book_path(reg.book)
+              %btn.btn
+                = link_to 'Return', return_book_path(reg.book), { method: :put }
